Complted Web Client Implementation

--- a/BitClient/Pages/Index.cshtml
+++ b/BitClient/Pages/Index.cshtml
@@ -9,4 +9,8 @@
     {<a href="?start=all">Start Service</a> }
     else
     {<a href="?stop=all">Stop Service</a>}
+
+
+    <p>You can <a href="/UploadTorrentFile">Upload a Torrent</a> for Download</p>
+    <p>You can <a href="/TrackTorrents">Track Torrents</a> and monitor their Progress</p>
 </div>
