--- a/BitClient/Pages/TrackTorrents.cshtml
+++ b/BitClient/Pages/TrackTorrents.cshtml
@@ -26,11 +26,12 @@
         @if (repo.Complete)
         {
 <br />
-                        <a href="@repo.AvailableDownloadPath">View Downloads</a>}
+                        <a href="/@repo.AvailableDownloadPath">View Downloads</a>}
     </td>
     <td>@repo.UserId</td>
-</tr>}
-            }
+</tr>
+}
+}
     </tbody>
 </table>
 
@@ -62,8 +63,9 @@
 else
 { <span>@queue.ExecutionFeedBack</span>}
     </td>
-</tr>}
-            }
+</tr>
+}
+}
     </tbody>
 </table>
 
